modified package.json in .

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://cleverAkanimoh.github.io/Re-Real-Estate-Project/",
+  "homepage": "https://cleverakanimoh.github.io/RE-Real-Estate-Project/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
